--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <script>
         // YOUR AUDIO DATA - Structure matching your S3 bucket
         const bucketUrl = "https://datademoh.s3.amazonaws.com";
-        const keyUnsecure = "?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=ASIAX3HORTKYXZTNYG3F%2F20251015%2Fus-east-2%2Fs3%2Faws4_request&X-Amz-Date=20251015T170634Z&X-Amz-Expires=300&X-Amz-Security-Token=IQoJb3JpZ2luX2VjENH%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaCXVzLWVhc3QtMiJHMEUCIEZrIWrZJrGEAQLAju4LLkMcBomi29YrkeYQ%2FigFIcAHAiEA9FUUExp8a6EbCIcPqOLcM7CjE1Ao6CKPGevLS8DhU9MqmQIIehAAGgw1Mzk1MTg2NzE1MzciDD5G0HXHkyjtGj5D1ir2AfwUasxDgCncPqi2OBgnkN7fqCQ58lzwCXjvngzXpRnI%2B1EQHS2hGuSesR%2FOYs7SlRa8WwJU0veXMR6PczKjl3yEFmcyKztlRtPseKhhzBdvyryS0kdf%2Fmh3GVwcqrg6nqj6CvhaeTVwwy%2FpQ6eJ%2FjQzC2mUP1TMMg3oz%2B%2F1ljYzIZUl3KiEX4unKc3aMHPEqFRFCDVpO6tIb6FazNUrK08kw33fb41bvu7kfw%2Bkm8D7U8J2E%2BuYxQZ56c4fa6DpNhDG0%2Boiq3Z4hYwIgbBbQqljDJdMDwb2kfkblhT6K08NDIejPzHZBMZqKMZKUaCQBlKpRiZn3jCp%2Br7HBjrfAcVBvGtk5BfUR02QgVlo%2FKSMTPAFS53h8PwvoYQI9IZsOGV%2B3Whbxjp0J%2FP4nE0PGEv4WpBledvRlvLOU8bkDATHV7wvOE3u%2BBIt9jwav/{keyUnsecure}eqxTJoGLy3T1UZNoByGQg0B1cP2RegXMS5adBi2zlF4xpTpy%2F5p%2Bw07fWTf3UtcqmjBAJ24LchJoAaeSBBSNYKkub83Of2sbYEZbzvTwDvt8DWEDGzfjKKLQ8zDPLhCtTHxD3mOCjh6pYMctXVFOQyIFra85H9eRT3znhaQrxotadkLz590ljdSp%2FEZiHD83C4%3D&X-Amz-Signature=a42e7dfd23df477cc93e41a4001b4e265612b539d4ed4fcff96235d605b22a1b&X-Amz-SignedHeaders=host&response-content-disposition=inline";
+        const keyUnsecure = "?X-Amz-Al[…]edHeaders=host&response-content-disposition=inline";
         
         const audioLibrary = [
             // Arabic - 1-5 min
