--- a/index.html
+++ b/index.html
@@ -465,7 +465,8 @@
             'es': 'Spanish',
             'fr': 'French',
             'de': 'German',
-            'ko': 'Korean'
+            'ko': 'Korean',
+            'ja': 'Japanese'
         };
 
         const languages = [...new Set(audioLibrary.map(audio => audio.language))].sort((a, b) => {
