--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             { filename: "drBGxiHDTZk_drBGxiHDTZk.wav", language: "ja", duration: "60plus min", url: `${bucketUrl}/ja/60plus_min/drBGxiHDTZk_drBGxiHDTZk.wav` },
             { filename: "fEyC1Unvvfw_fEyC1Unvvfw.wav", language: "ja", duration: "60plus min", url: `${bucketUrl}/ja/60plus_min/fEyC1Unvvfw_fEyC1Unvvfw.wav` },
 
-          { filename: "fkQm9etwr9k.wav", language: "en", duration: "1-5 min", url: `${bucketUrl}/en/1-5_min/fkQm9etwr9k.wav` },
+          { filename: "Alberto_–_Luca_Pixar_69FECzXiUAM_3522.wav", language: "en", duration: "1-5 min", url: `${bucketUrl}/en/1-5_min/Alberto_–_Luca_Pixar_69FECzXiUAM_3522.wav` },
           { filename: "David_DeVore_Jr__–_David_After_Dentist_Famous_Toddler_txqiwrbYGrs_1401.wav", language: "en", duration: "1-5 min", url: `${bucketUrl}/en/1-5_min/David_DeVore_Jr__–_David_After_Dentist_Famous_Toddler_txqiwrbYGrs_1401.wav` },
           { filename: "Ellen_Cleghorne_Comedian_Host_CQpeQpZ1BwE_733.wav", language: "en", duration: "1-5 min", url: `${bucketUrl}/en/1-5_min/Ellen_Cleghorne_Comedian_Host_CQpeQpZ1BwE_733.wav` },
           { filename: "Buzz_Lightyear_–_Toy_Story_series_Pixar_twzTb4Q1I8U_3450.wav", language: "en", duration: "1-5 min", url: `${bucketUrl}/en/1-5_min/Buzz_Lightyear_–_Toy_Story_series_Pixar_twzTb4Q1I8U_3450.wav` },
@@ -445,7 +445,7 @@
           { filename: "MC_FlUNVHLY_MC_FlUNVHLY_webm-chunk4.wav", language: "en", duration: "5-15 min", url: `${bucketUrl}/en/5-15_min/MC_FlUNVHLY_MC_FlUNVHLY_webm-chunk4.wav` },
           { filename: "0_3vmuW891U_0_3vmuW891U_webm-chunk2.wav", language: "en", duration: "5-15 min", url: `${bucketUrl}/en/5-15_min/0_3vmuW891U_0_3vmuW891U_webm-chunk2.wav` },
           { filename: "Golem_–_The_Simpsons_Golems_0Bkt2Qdnci0_1798.wav", language: "en", duration: "5-15 min", url: `${bucketUrl}/en/5-15_min/Golem_–_The_Simpsons_Golems_0Bkt2Qdnci0_1798.wav` },
-          { filename: "oi0j99HDNyQ.wav", language: "en", duration: "5-15 min", url: `${bucketUrl}/en/5-15_min/oi0j99HDNyQ.wav` },
+          { filename: "K4UGgXVHoew_K4UGgXVHoew-chunk3.wav", language: "en", duration: "5-15 min", url: `${bucketUrl}/en/5-15_min/K4UGgXVHoew_K4UGgXVHoew-chunk3.wav` },
           
           // English 60plus min (10 files)
           { filename: "60plus_min__Note to Self_20220721-The Lesser-Known Dark Side of Going Viral, with Mary Skinner.wav", language: "en", duration: "60plus min", url: `${bucketUrl}/en/60plus_min/60plus_min__Note to Self_20220721-The Lesser-Known Dark Side of Going Viral, with Mary Skinner.wav` },
