--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
             'de': 'German',
             'ko': 'Korean',
             'ja': 'Japanese',
-            'zh': 'Mandarin'
+            'zh': 'Mandarin/Sinitic'
         };
 
         const languages = [...new Set(audioLibrary.map(audio => audio.language))].sort((a, b) => {
